# garagetytus

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES  deny.toml  versions.toml
.agents/skills/garagetytus/: SKILL.md
.agents/skills/garagetytus-shared-folder/: SKILL.md
.github/workflows/: ci.yml
crates/garagetytus/: Cargo.toml
crates/garagetytus-core/: Cargo.toml
crates/garagetytus-core/src/: backend.rs  cluster.rs  lib.rs  paths.rs  secrets.rs
crates/garagetytus-grants/: Cargo.toml  README.md
crates/garagetytus-grants/src/: audit.rs  audit_escape.rs  lib.rs  rate_limit.rs  user_grants.rs
crates/garagetytus-watchdogs/: Cargo.toml
crates/garagetytus-watchdogs/src/: lib.rs
crates/garagetytus/src/: cli.rs  context.rs  main.rs
crates/garagetytus/src/commands/: about.rs  bootstrap.rs  bucket.rs  cluster.rs  install.rs  metrics.rs  mod.rs  start.rs  sync.rs
crates/garagetytus/tests/: contract_no_garage_crates.rs
docs/: MANUAL.md
docs/install/: linux.md  macos.md  windows.md
docs/integrate/: external-app.md  makakoo.md  tytus.md
docs/usage/: grants.md  quickstart.md
install/: homebrew-tap.rb  install.ps1  install.sh
sdk/python/: README.md  pyproject.toml
sdk/python/src/garagetytus/: __init__.py  _keychain.py
sdk/python/tests/: test_caller_context.py  test_dogfood.py
skills/garagetytus-bootstrap/: SKILL.md
skills/garagetytus-daily-ops/: SKILL.md
skills/garagetytus-install/: SKILL.md
skills/garagetytus-shared-folder/: AGENT-PROMPT.md  PROBE-PROMPT.md  SKILL.md
skills/garagetytus-troubleshoot/: SKILL.md
sprint-v0.5/phase0/: README.md  p01-droplet-access.sh  p02-multi-node-probe.sh  p03-rpc-probe.sh  p04-wg-throughput.sh  p05-pod-reachability.sh  p06-secret-channel.sh  p07-deny-all.sh  p08-binary-version.sh  probe.sh
tests/: helper_contracts.sh
tests/fixtures/: audit_escape_vectors.json  grant_glob_vectors.json  rate_limit_decrement_vectors.json
