[workspace]
resolver = "2"
members = [
    "crates/garagetytus",
    "crates/garagetytus-core",
    "crates/garagetytus-grants",
    "crates/garagetytus-watchdogs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Schkudlara <sebastian@traylinx.com>"]
license = "MIT"
repository = "https://github.com/traylinx/garagetytus"
homepage = "https://garagetytus.dev"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
fs2 = "0.4"
keyring = "2.3"
rand = "0.8"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.30"
thiserror = "2"
tokio = { version = "1.40", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"

# Internal workspace crates
garagetytus-core = { path = "crates/garagetytus-core" }
garagetytus-grants = { path = "crates/garagetytus-grants" }
garagetytus-watchdogs = { path = "crates/garagetytus-watchdogs" }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
