[package]
name = "garagetytus-grants"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "User-grant runtime store (carved from Makakoo v0.7.1 — schema-stable across garagetytus, makakoo, tytus)."
readme = "README.md"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
fs2.workspace = true
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
